--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fastify/cors": "^8.4.1",
     "@prisma/client": "^5.5.2",
     "fastify": "^4.24.3",
+    "prisma": "^5.6.0",
     "txs": "^1.0.0"
   }
 }
